js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.10.kt
fun getString(): String {
    val s: (Int, Int, Int, Int, Int, Int, Int, Int, Int) -> Unit = { _, _, _, _, _, _, _, _, _ -> }
    return getTypeName(s)
}
